# Quay

./: .gitignore  Justfile  README.md
.json-schema/: target_spec.json
.targets/: x86_64-quay-kernel.json
quay-kernel/: Cargo.toml  Justfile  linker.ld  rust-toolchain.toml
quay-kernel/.cargo/: config.toml
quay-kernel/etc/limine/: limine.conf
quay-kernel/etc/quay/: quay.ron
quay-kernel/src/: main.rs  serial.rs
quay-kernel/src/arch/: mod.rs
quay-kernel/src/arch/x86_64/: apic.rs  cpu.rs  gdt.rs  idt.rs  mod.rs  pic.rs  port_io.rs  timer.rs  vmm.rs
quay-kernel/src/arch/x86_64/cpu/: feature.rs  local_data.rs  mod.rs
quay-kernel/src/arch/x86_64/init/: mod.rs
quay-kernel/src/arch/x86_64/isr/: mod.rs
quay-kernel/src/arch/x86_64/isr/exception/: breakpoint.rs  divide.rs  double_fault.rs  gpf.rs  mod.rs  page_fault.rs
quay-kernel/src/arch/x86_64/isr/hardware/: apic_error.rs  apic_timer.rs  mod.rs
quay-kernel/src/drivers/: mod.rs
quay-kernel/src/drivers/pci/: bar.rs  device.rs  mod.rs
quay-kernel/src/drivers/timer/: mod.rs  tsc.rs
quay-kernel/src/drivers/virtio/: block.rs  hal.rs  mod.rs
quay-kernel/src/graphics/: mod.rs
quay-kernel/src/hal/: mod.rs  timer.rs
quay-kernel/src/io/: mod.rs
quay-kernel/src/io/block/: gpt.rs  mod.rs  partition.rs
quay-kernel/src/io/fs/: mod.rs
quay-kernel/src/memory/: frame_alloc.rs  heap_alloc.rs  mapper.rs  mod.rs  pmm.rs  vmm.rs
quay-kernel/src/platform/: mod.rs
quay-kernel/src/platform/gdt/: mod.rs
quay-kernel/src/platform/interrupt/: apic.rs  mod.rs  timer.rs
quay-kernel/src/platform/pci/: device.rs  mod.rs  virtio.rs
quay-kernel/src/sys/: mod.rs  time.rs
quay-kernel/src/sys/acpi/: mod.rs
quay-kernel/src/sys/memory/: khm.rs  mod.rs  phys_memory_manager.rs
quay-kernel/src/sys/memory/pmm/: error.rs  mod.rs  order.rs
quay-kernel/src/sys/memory/vmm/: error.rs  map_flags.rs  mod.rs  page_size.rs
quay-kernel/src/x86/: mod.rs
quay-kernel/src/x86/acpi/: mod.rs
quay-kernel/src/x86/gdt/: mod.rs
quay-kernel/src/x86/interrupt/: apic.rs  mod.rs  timer.rs
