[package]
name = "quay-kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "quay-kernel"
path = "src/main.rs"
harness = false

[dependencies]
# Bootloader
limine = { version = "0.5.0", features = ["uuid"] }

# Platform
x86_64 = { version = "0.15.4" }

# Communications
uart_16550 = { version = "0.4.0", features = ["nightly"] }

# Parallelism
spin = { version = "0.10.0" }

# Utilities
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }

# Error handling and Reporting
log = { version = "0.4.29", default-features = false }