[package]
name = "quay-kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "quay-kernel"
path = "src/main.rs"
harness = false

[dependencies]
# Bootloader
limine = { version = "0.5.0", features = ["uuid"] }

# Platform
x86_64 = { version = "0.15.4" }
talc = { version = "4.4.3" }
pc-keyboard = { version = "0.8.0" }
acpi = { version = "6.1.0" }
x2apic = { version = "0.5.0" }
virtio-drivers = { version = "0.13.0" }

# Communications
uart_16550 = { version = "0.4.0", features = ["nightly"] }

# Parallelism
spin = { version = "0.10.0" }

# Utilities
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
bitflags = { version = "2.11.0", default-features = false }
uguid = { version = "2.2.1" }
gpt_disk_io = { version = "0.16.2", features = ["alloc"] }
btrfs-no-std = { version = "0.2.1" }

# Serialization
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
ron = { version = "0.12.0", default-features = false }

# Graphics and Rendering
edid-rs = { version = "0.1.0", default-features = false, features = ["no_std"] }
embedded-graphics = { version = "0.8.2" }

# Error handling and Reporting
log = { version = "0.4.29", default-features = false }
thiserror-no-std = { version = "2.0.2" }